--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,7 @@
                     <li><a href="">نبذة عنا</a></li>
                     <li><a href="">الباقات</a></li>
                     <li><a href="">تواصل معنا</a></li>
+                    <li><a href="">تواصل معنا</a></li>
                     <li> <a href="http://164.90.180.108/auth/login">تسجيل </a></li>
                   
                 </ul>
