--- a/views/index.html
+++ b/views/index.html
@@ -33,9 +33,11 @@
                     <li><a href="">نبذة عنا</a></li>
                     <li><a href="">الباقات</a></li>
                     <li><a href="">تواصل معنا</a></li>
-                    <li><a href="">تواصل معنا</a></li>
                     <li> <a href="http://164.90.180.108/auth/login">تسجيل </a></li>
-                  
+                  <!--  اختبار git -->
+                    <!--  اختبار git -->
+                      <!--  اختبار git -->
+
                 </ul>
             </div>
 
